--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
                   <ul>
                     <li><a href="buttons.html">Buttons</a></li>
                     <li><a href="fields.html">Fields</a></li>
+                    <li><a href="field-groups.html">Field groups</a></li>
                   </ul>
                 </li>
                 <li> 
