--- a/public/adviser-tool-logged-out.html
+++ b/public/adviser-tool-logged-out.html
@@ -25,7 +25,7 @@
     <script src="../libs/javascript/collapse.js"></script>
     <script src="../libs/vendors/prism/prism.js"></script>
   </head>
-  <body>
+  <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
     <aside class="section-notice__login">
       <h2 class="screenreader">Notice</h2>
@@ -100,7 +100,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer><!--[if IE 8]></div><![endif]-->
     <script src="../libs/javascript/advisor.js"></script>
     <script src="../libs/javascript/core.js"></script>
   </body>
