--- a/public/cookie-monster.html
+++ b/public/cookie-monster.html
@@ -25,7 +25,7 @@
     <script src="../libs/javascript/collapse.js"></script>
     <script src="../libs/vendors/prism/prism.js"></script>
   </head>
-  <body>
+  <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
     <div class="cookie-monster hide-no-cookies hide-no-js no-print">
       <div class="cookie-monster__content">
@@ -77,7 +77,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer><!--[if IE 8]></div><![endif]-->
     <script src="../libs/javascript/advisor.js"></script>
     <script src="../libs/javascript/core.js"></script>
   </body>
