--- a/public/cookie-monster.html
+++ b/public/cookie-monster.html
@@ -33,6 +33,9 @@
         <button data-action="close" type="button" class="btn cookie-monster__close">Close</button>
       </div>
     </div>
+    <header class="main-header">
+      <div class="main-header__content main-content"><a href="index.html" title="Citizens Advice home" class="main-header__logo no-print"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&amp;#39;/Static/images/logos/ca-logo_100px.svg.png&amp;#39;;" src="assets/images/ca-logo_100px.svg"></a><img src="assets/images/ca-logo-hz-280px.svg" class="print-only logo"></div>
+    </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
         <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#organisms" title="Organisms">Organisms</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Cookie Monster</span>
