--- a/public/mockup.html
+++ b/public/mockup.html
@@ -27,6 +27,12 @@
   </head>
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
+    <div class="cookie-monster hide-no-cookies hide-no-js no-print">
+      <div class="cookie-monster__content">
+        <p>This site uses cookies. Find out more about <a href="#">our use of cookies</a>.</p>
+        <button data-action="close" type="button" class="btn cookie-monster__close">Close</button>
+      </div>
+    </div>
     <header class="main-header">
       <div class="main-header__content"><a href="" title="Citizens Advice home" class="main-header__logo"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&amp;#39;/Static/images/logos/ca-logo_100px.svg.png&amp;#39;;" src="assets/images/ca-logo_100px.svg"></a>
         <div data-track-zone="top-bar" class="main-header__links"><a href="" class="main-header__menu-link js-toggle-menu"><i class="icon-menu"></i>Menu</a>
