Largely IE8 fixes

--- a/public/adviser-logged-out.html
+++ b/public/adviser-logged-out.html
@@ -45,7 +45,7 @@
         </div>
       </aside>
       <div class="main-content">
-        <main id="main" role="main" class="main-content__right">
+        <div id="main" role="main" class="main-content__right">
           <div class="title">
             <h1 class="title__heading js-ref"><span class="title__title">Content page</span></h1>
           </div>
@@ -70,7 +70,7 @@
           <div class="title__subheading--footer">
             <p>Share this page</p><a href="https://twitter.com/share?url=" data-track="Twitter" rel="external" class="a-social-twitter">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=" data-track="Facebook" rel="external" class="a-social-facebook">Facebook</a><a href="https://plus.google.com/share?url=" data-track="Google+" rel="external" class="a-social-google-plus">Google Plus</a><a href="whatsapp://send" data-text="share?url=" data-track="whatsapp" rel="external" class="a-social-whatsapp">Whatsapp</a>
           </div>
-        </main>
+        </div>
         <!-- Set the number at the end to the array position of the active page-->
         <nav class="side-nav-beta">
           <ul>
