Changed print only section to div in template for ie8

--- a/public/adviser-logged-out.html
+++ b/public/adviser-logged-out.html
@@ -88,9 +88,9 @@
             <li class="side-nav-beta__heading -active -open"></li>
           </ul>
         </nav>
-        <section class="print-only">
+        <div class="print-only">
           <h2>This section is print only</h2>
-        </section>
+        </div>
       </div>
     </div>
     <footer data-track-zone="footer" id="footer" class="main-footer">
