--- a/public/advisor.html
+++ b/public/advisor.html
@@ -137,9 +137,9 @@
         <div id="advisorInline1--box" class="advisor--box">
           <Lorem>ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</Lorem>
         </div>
-        <section class="print-only">
+        <div class="print-only">
           <h2>This section is print only</h2>
-        </section>
+        </div>
       </div>
     </div>
     <footer data-track-zone="footer" id="footer" class="main-footer">
