--- a/public/cookie-monster.html
+++ b/public/cookie-monster.html
@@ -64,9 +64,9 @@
 &lt;/div&gt;</code></pre>
           </div>
         </div>
-        <section class="print-only">
+        <div class="print-only">
           <h2>This section is print only</h2>
-        </section>
+        </div>
       </div>
     </div>
     <footer data-track-zone="footer" id="footer" class="main-footer">
