--- a/public/field-groups.html
+++ b/public/field-groups.html
@@ -155,9 +155,9 @@
             </div>
           </div>
         </div>
-        <section class="print-only">
+        <div class="print-only">
           <h2>This section is print only</h2>
-        </section>
+        </div>
       </div>
     </div>
     <footer data-track-zone="footer" id="footer" class="main-footer">
