--- a/public/principles.html
+++ b/public/principles.html
@@ -71,9 +71,9 @@
             <p>Design is continuous. Be agile, review, iterate, improve.</p>
           </div>
         </div>
-        <section class="print-only">
+        <div class="print-only">
           <h2>This section is print only</h2>
-        </section>
+        </div>
       </div>
     </div>
     <footer data-track-zone="footer" id="footer" class="main-footer">
