--- a/public/adviser-tool-logged-out.html
+++ b/public/adviser-tool-logged-out.html
@@ -84,9 +84,9 @@
             <li class="side-nav-beta__heading -active -open"><a></a></li>
           </ul>
         </nav>
-        <section class="print-only">
+        <div class="print-only">
           <h2>This section is print only</h2>
-        </section>
+        </div>
       </div>
     </div>
     <footer data-track-zone="footer" id="footer" class="main-footer">
