--- a/public/adviser-tool.html
+++ b/public/adviser-tool.html
@@ -91,9 +91,9 @@
             </ul>
           </ul>
         </nav>
-        <section class="print-only">
+        <div class="print-only">
           <h2>This section is print only</h2>
-        </section>
+        </div>
       </div>
     </div>
     <footer data-track-zone="footer" id="footer" class="main-footer">
