Sidebar changes in the template

--- a/public/mockup.html
+++ b/public/mockup.html
@@ -64,7 +64,7 @@
       <aside class="section-notice">
         <h2 class="screenreader">Notice</h2>
         <div class="section-notice__content">
-          <p><span class="badge">NEW</span>This page is part of <a href="#">our new approach to digital advice</a>.</p>
+          <p><span class="badge">NEW</span> This page is part of <a href="#">our new approach to digital advice</a>.</p>
         </div>
       </aside>
       <div class="main-content">
@@ -322,16 +322,37 @@
             <p>Share this page</p><a href="https://twitter.com/share?url=" data-track="Twitter" rel="external" class="a-social-twitter">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=" data-track="Facebook" rel="external" class="a-social-facebook">Facebook</a><a href="https://plus.google.com/share?url=" data-track="Google+" rel="external" class="a-social-google-plus">Google Plus</a><a href="whatsapp://send" data-text="share?url=" data-track="whatsapp" rel="external" class="a-social-whatsapp">Whatsapp</a>
           </div>
         </div>
-        <!-- Set the number at the end to the array position of the active page-->
         <nav class="side-nav-beta">
           <ul>
             <li class="side-nav-beta__heading -active -open"><a><span>Builders and home improvements</span></a></li>
-            <ul>
-              <li class="side-nav-beta__sibling"><a href="#" title="Before you get work done on your home" class="-current">Before you get work done on your home</a>
-              </li>
-              <li class="side-nav-beta__sibling"><a href="#" title="Problems with home improvements">Problems with home improvements</a>
-              </li>
-            </ul>
+            <li>
+              <ul>
+                <li class="side-nav-beta__sibling"><a href="#" title="Before you get work done on your home" class="-current">Before you get work done on your home</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="#" title="Problems with home improvements">Problems with home improvements</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        <div class="callout--related side-nav-beta">
+          <p>X</p>
+        </div>
+        <nav class="side-nav-beta">
+          <ul>
+            <li class="side-nav-beta__heading -active -open"><a><span>Sibling categories</span></a></li>
+            <li>
+              <ul>
+                <li class="side-nav-beta__sibling"><a href="#" title="Sibling two">Sibling two</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="#" title="Sibling three">Sibling three</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="#" title="Sibling four">Sibling four</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="#" title="Sibling five">Sibling five</a>
+                </li>
+              </ul>
+            </li>
           </ul>
         </nav>
         <div class="print-only">
