Added new mixin for sibling category sidebar (so it can have unique styling)

--- a/public/mockup.html
+++ b/public/mockup.html
@@ -335,10 +335,7 @@
             </li>
           </ul>
         </nav>
-        <div class="callout--related side-nav-beta">
-          <p>X</p>
-        </div>
-        <nav class="side-nav-beta">
+        <nav class="side-nav-beta sibling">
           <ul>
             <li class="side-nav-beta__heading -active -open"><a><span>Sibling categories</span></a></li>
             <li>
