--- a/public/adviser-2.html
+++ b/public/adviser-2.html
@@ -24,6 +24,7 @@
     <script src="../libs/javascript/beta-dap-accordion.js"></script>
     <script src="../libs/javascript/collapse.js"></script>
     <script src="../libs/vendors/prism/prism.js"></script>
+    <script src="../libs/javascript/smooth.js"></script>
   </head>
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
