Update content example

--- a/public/collapse.html
+++ b/public/collapse.html
@@ -46,7 +46,7 @@
               <div class="collapse collapsible">
                 <div class="collapse-toggle">Unstyled content inside header/toggle</div>
                 <div class="collapse-content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close button</a>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close</a>
                 </div>
               </div>
             </div>
@@ -54,18 +54,18 @@
 	&lt;div class="collapse-toggle"&gt;Unstyled content inside header/toggle&lt;/div&gt;
 	&lt;div class="collapse-content"&gt;
 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="collapse collapsible--aqua">
                 <div class="collapse-toggle">Collapses can be grouped</div>
                 <div class="collapse-content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close button</a>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close</a>
                 </div>
                 <div class="collapse-toggle">Collapses can be grouped</div>
                 <div class="collapse-content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close button</a>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close</a>
                 </div>
               </div>
             </div>
@@ -73,12 +73,12 @@
 	&lt;div class="collapse-toggle"&gt;Collapses can be grouped&lt;/div&gt;
 	&lt;div class="collapse-content"&gt;
 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 	&lt;/div&gt;
 	&lt;div class="collapse-toggle"&gt;Collapses can be grouped&lt;/div&gt;
 	&lt;div class="collapse-content"&gt;
 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
             <div class="example-box-plain">
@@ -88,7 +88,7 @@
                   <p>Heading toggle can also contain formatted html.</p>
                 </div>
                 <div class="collapse-content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close button</a>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close</a>
                 </div>
               </div>
             </div>
@@ -99,14 +99,14 @@
 	&lt;/div&gt;
 	&lt;div class="collapse-content"&gt;
 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="collapse collapsible--red">
                 <div class="collapse-toggle">Unstyled content inside header/toggle</div>
                 <div class="collapse-content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close button</a>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close</a>
                 </div>
               </div>
             </div>
@@ -114,7 +114,7 @@
 	&lt;div class="collapse-toggle"&gt;Unstyled content inside header/toggle&lt;/div&gt;
 	&lt;div class="collapse-content"&gt;
 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+		&lt;a class="collapse-toggle-close"&gt;Close&lt;/a&gt;
 	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
             <div class="example-box-plain">
@@ -122,7 +122,7 @@
               <section class="revealable">
                 <h3 id="heading-one" aria-controls="revealable-1" aria-expanded="true" tabindex="0" title="Expand section" class="revealable__heading">Heading one</h3>
                 <div id="revealable-1" aria-expanded="false" aria-hidden="false" class="revealable__content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a href="#" class="revealable__close">Close button</a>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a href="#" class="revealable__close">Close</a>
                 </div>
                 <h3 id="heading-two" aria-controls="revealable-2" aria-expanded="false" tabindex="0" title="Expand section" class="revealable__heading">Heading two</h3>
               </section>
@@ -131,7 +131,7 @@
 	&lt;h3 id="heading-one" aria-controls="revealable-1" aria-expanded="true" tabindex="0" title="Expand section" class="revealable__heading"&gt;Heading one&lt;/h3&gt;
 	&lt;div id="revealable-1" aria-expanded="false" aria-hidden="false" class="revealable__content"&gt;
 		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
-		&lt;a href="#" class="revealable__close"&gt;Close button&lt;/a&gt;
+		&lt;a href="#" class="revealable__close"&gt;Close&lt;/a&gt;
 	&lt;/div&gt;
 	&lt;h3 id="heading-two" aria-controls="revealable-2" aria-expanded="false" tabindex="0" title="Expand section" class="revealable__heading"&gt;Heading two&lt;/h3&gt;
 &lt;/section&gt;</code></pre>
