--- a/public/content.html
+++ b/public/content.html
@@ -122,7 +122,7 @@
                   <p>Textphone 0800 917 7777</p>
                   <p>Open Monday to Friday, 8am to 6pm</p>
                   <p>Calls are free from landlines and from mobiles.</p>
-                  <p>It should take about 20 minutes to complete the call. If you’d prefer someone else to call for you that’s fine, but you need to be with them so that you can give permission for them to speak for you.</p><a class="collapse-toggle-close">Close button</a>
+                  <p>It should take about 20 minutes to complete the call. If you’d prefer someone else to call for you that’s fine, but you need to be with them so that you can give permission for them to speak for you.</p><a class="collapse-toggle-close">Close</a>
                 </div>
               </div>
               <div class="collapse collapsible">
@@ -133,17 +133,10 @@
                   <p>Personal Independence Payment New Claims </p>
                   <p>Post Handling Site B </p>
                   <p>Wolverhampton </p>
-                  <p>WV99 1AH</p><a class="collapse-toggle-close">Close button</a>
+                  <p>WV99 1AH</p><a class="collapse-toggle-close">Close</a>
                 </div>
               </div>
-              <div class="callout--related">
-                <h3>Next steps</h3>
-                <p>The DWP will assess whether you meet the basic eligibility conditions.</p>
-                <p>If you do, they’ll send you a PIP claim form. This form is where you tell them how your condition affects you. If you’ve waited more than 2 weeks, contact the PIP claims line and ask them for an update.</p>
-                <p>While you wait for the PIP2 form, you should think about <a href="#">how to fill in the PIP claim form</a> and if you need to organise any <a href="#">supporting evidence</a> to support your claim.</p>
-                <p>If you don’t meet the basic eligibility conditions, you’ll be sent a decision letter to say why you’ve been refused. If you think the decision is wrong, you can <a href="#">challenge the DWP’s decision</a>.</p>
-              </div>
-              <div class="callout--adviser">
+              <div class="callout--adviser callout--icon">
                 <h3>Information for advisers</h3>
                 <p>The PIP2 form is sometimes called ‘How your condition affects you’ form</p>
                 <ul>
@@ -154,6 +147,13 @@
                 <p>Case law: <a href="#">Unlawful delays in processing a PIP claim and the High Court’s decision</a></p>
                 <p>Power of attorney: <a href="#">making decisions for someone who lacks mental capacity</a></p>
                 <p><a href="#">Appointees and benefit claims</a></p>
+              </div>
+              <div class="callout--related">
+                <h3>Next steps</h3>
+                <p>The DWP will assess whether you meet the basic eligibility conditions.</p>
+                <p>If you do, they’ll send you a PIP claim form. This form is where you tell them how your condition affects you. If you’ve waited more than 2 weeks, contact the PIP claims line and ask them for an update.</p>
+                <p>While you wait for the PIP2 form, you should think about <a href="#">how to fill in the PIP claim form</a> and if you need to organise any <a href="#">supporting evidence</a> to support your claim.</p>
+                <p>If you don’t meet the basic eligibility conditions, you’ll be sent a decision letter to say why you’ve been refused. If you think the decision is wrong, you can <a href="#">challenge the DWP’s decision</a>.</p>
               </div>
             </div>
           </div>
